Add Fixture + Assert + Comments in Article

--- a/src/Maic/BlogBundle/Resources/config/routing.yml
+++ b/src/Maic/BlogBundle/Resources/config/routing.yml
@@ -19,3 +19,9 @@ maic_blog_modifier:
 maic_blog_ajouter:
     path:     /ajouter
     defaults: { _controller: MaicBlogBundle:Blog:ajouter }
+    
+maic_blog_supprimer:
+    path:     /del/{id}
+    defaults: { _controller: MaicBlogBundle:Blog:supprimer }
+    requirements:
+        id: \d+
