--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "incenteev/composer-parameter-handler": "~2.0"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "2.2.*",
         "sensio/generator-bundle": "~2.3"
     },
     "scripts": {
