--- a/src/Maic/BlogBundle/Resources/config/services.yml
+++ b/src/Maic/BlogBundle/Resources/config/services.yml
@@ -2,3 +2,6 @@ services:
 #    maic_blog.example:
 #        class: Maic\BlogBundle\Example
 #        arguments: [@service_id, "plain_value", %parameter%]
+
+    maic_blog.slugger:
+        class: Maic\BlogBundle\Service\Slugger
