--- a/src/Maic/BlogBundle/Resources/config/routing.yml
+++ b/src/Maic/BlogBundle/Resources/config/routing.yml
@@ -1,27 +1,27 @@
-maic_blog_homepage:
-    path:     /{page}
-    defaults: { _controller: MaicBlogBundle:Blog:index, page: 1 }
-    requirements:
-        page: \d+
+#maic_blog_homepage:
+#    path:     /{page}
+#    defaults: { _controller: MaicBlogBundle:Blog:index, page: 1 }
+#    requirements:
+#        page: \d+
 
-maic_blog_voir:
-    path:     /article/{id}
-    defaults: { _controller: MaicBlogBundle:Blog:voir }
-    requirements:
-        id: \d+
+#maic_blog_voir:
+#    path:     /article/{id}
+#    defaults: { _controller: MaicBlogBundle:Blog:voir }
+#    requirements:
+#        id: \d+
         
-maic_blog_modifier:
-    path:     /modifier/{id}
-    defaults: { _controller: MaicBlogBundle:Blog:modifier }
-    requirements:
-        id: \d+
+#maic_blog_modifier:
+#    path:     /modifier/{id}
+#    defaults: { _controller: MaicBlogBundle:Blog:modifier }
+#    requirements:
+#        id: \d+
         
-maic_blog_ajouter:
-    path:     /ajouter
-    defaults: { _controller: MaicBlogBundle:Blog:ajouter }
-    
-maic_blog_supprimer:
-    path:     /del/{id}
-    defaults: { _controller: MaicBlogBundle:Blog:supprimer }
-    requirements:
-        id: \d+
+#maic_blog_ajouter:
+#    path:     /ajouter
+#    defaults: { _controller: MaicBlogBundle:Blog:ajouter }
+   
+#maic_blog_supprimer:
+#    path:     /del/{id}
+#    defaults: { _controller: MaicBlogBundle:Blog:supprimer }
+#    requirements:
+#        id: \d+
