--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
+maic_client:
+    resource: "@MaicClientBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 maic_blog:
     resource: "@MaicBlogBundle/Resources/config/routing.yml"
     prefix:   /blog
